# polars-plugins

./: Cargo.toml  README.md  environment.yml
my_plugins/: Cargo.toml  pyproject.toml  pyrpoject.toml
my_plugins/my_plugins/: __init__.py
my_plugins/src/: lib.rs  string_expr.rs
my_plugins/usages/: use.py
