[package]
name = "my_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_plugins"
crate-type = ["cdylib"]

[dependencies]
polars = "0.33.2"
pyo3 = "0.19.2"
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars.git", features = ["derive"] }
